--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,10 +4,16 @@ on:
     types: [opened, synchronize]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     name: script/cibuild
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./
+          destination: ./_site
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.2.0
@@ -16,3 +22,14 @@ jobs:
         run: script/bootstrap
       - name: test
         run: script/cibuild
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: macos-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
